# stm32_project

./: .gitignore  .gitmodules  README.md
STM32_F1/DMA_test_F1/: .mxproject  DMA_test.ioc
STM32_F1/DMA_test_F1/Core/Inc/: stm32f1xx_it.h
STM32_F1/DMA_test_F1/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
STM32_F1/DMA_test_F1/MDK-ARM/: DMA_test.uvguix.DELL  DMA_test.uvoptx  DMA_test.uvprojx  startup_stm32f103xb.lst
STM32_F1/DMA_test_F1/MDK-ARM/DMA_test/: DMA_test.axf  DMA_test.build_log.htm  DMA_test.hex  DMA_test.htm  DMA_test.lnp  DMA_test.map  DMA_test_DMA_test.dep  main.crf  main.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.crf  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.crf  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.crf  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.crf  stm32f1xx_hal_tim_ex.d  stm32f1xx_hal_uart.crf  stm32f1xx_hal_uart.d  (+4 more)
STM32_F1/NM_DK_TM/: Fitting.m
STM32_F1/NM_DK_TM/Tracking_Project/: ObjectDetectionModule.py  SerialModule.py  Tracking.py  detect_hand.py  fuzzy_controller.py  fuzzy_python.py
STM32_F1/NM_DK_TM/Tracking_Project/Resources/: myball.xml  mycatdetector2.xml
STM32_F1/NM_DK_TM/UART_PWM_Control_25_law/: .mxproject  UART_PWM_Control.ioc
STM32_F1/NM_DK_TM/UART_PWM_Control_25_law/MDK-ARM/: UART_PWM_Control.uvguix.DELL  UART_PWM_Control.uvoptx  UART_PWM_Control.uvprojx  (+1 more)
STM32_F1/Test_7seg_F1/: .mxproject  7seg.ioc  CMakeLists.txt
STM32_F1/Test_7seg_F1/MDK-ARM/: 7seg.uvguix.DELL  7seg.uvoptx  7seg.uvprojx  startup_stm32f103xb.lst
STM32_F1/Test_7seg_F1/src/: main.c  system_timetick.c  system_timetick.h
STM32_F1/counter_timer1_F1/: .mxproject  counter_timer1.ioc
STM32_F1/counter_timer1_F1/MDK-ARM/: counter_timer1.uvguix.DELL  counter_timer1.uvoptx  counter_timer1.uvprojx  startup_stm32f103xb.lst
STM32_F1/demo_GPIO/: CMakeLists.txt  Makefile  readme.md
STM32_F1/demo_GPIO/src/: main.c  main.cpp  syscalls.c  system_timetick.c  system_timetick.h
STM32_F1/demo_PWM/: CMakeLists.txt  Makefile
STM32_F1/demo_PWM/linker/: STM32F103x6.ld
STM32_F1/demo_PWM/src/: main.cpp  pwm.cpp  pwm.h  system_timetick.c
STM32_F1/demo_PWM/startup/: STM32F103x6.s
STM32_F1/demo_RTOS/: .gitignore  CMakeLists.txt  Makefile  readMe.md
STM32_F1/demo_RTOS/src/: FreeRTOSConfig.h  gpio.cpp  main.cpp  uart.cpp  uart.h
STM32_F1/demo_UART/: CMakeLists.txt  Makefile
STM32_F1/demo_UART/src/: main.cpp
STM32_F1/test_lcd_F1/: .mxproject  test_lcd.ioc
STM32_F1/test_lcd_F1/MDK-ARM/: startup_stm32f103xb.lst  test_lcd.uvguix.DELL  test_lcd.uvoptx  test_lcd.uvprojx
STM32_F4/CmakeProject/control_servo/: CMakeLists.txt
STM32_F4/CmakeProject/delta_robot_control/: CMakeLists.txt  Makefile  readMe.md
STM32_F4/CmakeProject/delta_robot_control/src/: FreeRTOSConfig.h  gpio.cpp  gpio.h  main.cpp  uart.cpp  uart.h
STM32_F4/CmakeProject/delta_robot_control/startup/: STM32F407xx.s
STM32_F4/CmakeProject/demo_ADC/: CMakeLists.txt  gcc-arm-none-eabi.cmake
STM32_F4/CmakeProject/demo_CAN/: CMakeLists.txt  Makefile  gcc-arm-none-eabi.cmake
STM32_F4/CmakeProject/demo_GPIO/: CMakeLists.txt  readMe.md
STM32_F4/CmakeProject/demo_RTOS/: CMakeLists.txt  Makefile  readMe.md
STM32_F4/MDK_5/DEMO_FreeRTOS/: FreeRTOS.uvguix.DELL  FreeRTOS.uvoptx  FreeRTOS.uvprojx
STM32_F4/MDK_5/DEMO_RTOS/: main.c  test.uvguix.DELL  test.uvoptx  test.uvprojx
STM32_F4/MDK_5/IO_DEMO/: DEMO_UART.uvguix.DELL  DEMO_UART.uvoptx  main.c  system_timetick.c
STM32_F4/MDK_5/POSITION_Control/: .mxproject  Makefile  POSITION_Control.ioc
STM32_F4/MDK_5/UART_DEMO/: DEMO_UART.uvguix.DELL  DEMO_UART.uvoptx  DEMO_UART.uvprojx
STM32_F4/MakeFileProject/: readme.txt
STM32_F4/MakeFileProject/PWM/: Makefile
STM32_F4/MakeFileProject/demo_GPIO/: Makefile
STM32_F4/MakeFileProject/src_ADC_BTVN/: main.c
STM32_F4/MakeFileProject/src_Interrupt/: stm32f4xx.h  system_timetick.h
STM32_F4/MakeFileProject/src_PID_controll/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.h
STM32_F4/MakeFileProject/src_UART/: system_stm32f4xx.c
STM32_F4/MakeFileProject/src_demo_GPIO/: main_txdma.c
STM32_F4/MakeFileProject/src_demo_RTOS/: gpio.c  gpio.h  interrupt.c  interrupt.h  uart.c
STM32_F4/MakeFileProject/src_demo_UART/: main.c  main_rxdma.c
STM32_F4/STD_Makeflie_Project/: readme.txt
demo_FreeRTOS/: Makefile
demo_FreeRTOS/Core/Inc/: delay.h  gpio.h  interrupt.h  uart.h
demo_FreeRTOS/Core/Src/: cJSON.c  delay.c  gpio.c  interrupt.c  main.cpp  uart.c
demo_FreeRTOS/FreeRTOS/include/: FreeRTOSConfig.h
demo_FreeRTOS/startup/: STM32F407xx.s
demo_UART/: Makefile
demo_UART/Core/Inc/: PID.h  fuzzy_ctrl.h  stm32f4xx.h  system_timetick.h
demo_UART/Core/Src/: PID.cpp  fuzzy_ctrl.cpp  main.cpp  system_stm32f4xx.c  system_timetick.c
demo_folow_object/: FreeRTOS.uvguix.Admin  FreeRTOS.uvguix.DELL  FreeRTOS.uvguix.duong.le-thanh  FreeRTOS.uvoptx  FreeRTOS.uvprojx  Makefile
demo_folow_object/Core/: delay.c  gpio.c  gpio.h  interrupt.c  interrupt.h  main.c  pwm.c  pwm.h  stm32f4xx.h  uart.c  uart.h
demo_folow_object/Listings/: FreeRTOS.map  startup_stm32f407xx.lst
demo_folow_object/Objects/: FreeRTOS.axf  FreeRTOS.build_log.htm  FreeRTOS.hex  FreeRTOS.htm  FreeRTOS.lnp  FreeRTOS_FreeRTOS.dep  cjson.d  croutine.d  delay.d  event_groups.d  gpio.d  heap_4.d  interrupt.d  list.d  main.d  misc.d  port.d  queue.d  startup_stm32f407xx.d  stm32f4xx_gpio.d  stm32f4xx_rcc.d  stm32f4xx_tim.d  stm32f4xx_usart.d  stream_buffer.d  system_stm32f4xx.d  system_stm32f4xx_1.d  tasks.d  timers.d  uart.d
demo_folow_object/RTE/_FreeRTOS/: RTE_Components.h
demo_folow_object/RTE/_Target_1/: RTE_Components.h
demo_folow_object/RTE/_follow_object/: RTE_Components.h
(+491 files in other folders)
